--- a/BudgieBudgeting/Pages/login.cshtml
+++ b/BudgieBudgeting/Pages/login.cshtml
@@ -1,9 +1,9 @@
 ﻿@page
 @model BudgieBudgeting.Pages.loginModel
 @{
-	 ViewData["Title"] = "Login";
+    ViewData["Title"] = "Login";
 }
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>Nathan Swan Pole</title>
@@ -21,12 +21,18 @@
                     </div>
                     <div class="panel-body">
                         <form method="post">
+                            @if (!string.IsNullOrEmpty(Model.ErrorMessage))
+                            {
+                                <div class="alert alert-danger">@Model.ErrorMessage</div>
+                            }
                             <fieldset>
                                 <div class="form-group">
-									<input class="form-control" type="text" placeholder="sfsdf@example.com">
+                                    <input class="form-control" type="text" asp-for="Credential.Username" placeholder="sfsdf@example.com">
+                                    <span asp-validation-for="Credential.Username" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-									<input class="form-control" type="password" placeholder=" Password">
+                                    <input class="form-control" type="password" asp-for="Credential.Password" placeholder="Password">
+                                    <span asp-validation-for="Credential.Password" class="text-danger"></span>
                                 </div>
                                 <div class="checkbox">
                                     <label>
@@ -35,9 +41,11 @@
                                 </div>
                                 <input class="btn btn-lg btn-success btn-block" type="submit" value="Login">
                                 <div style="text-align:center; padding:4px;">Or</div>
-                                    
                             </fieldset>
                         </form>
+                        @section Scripts {
+                            <partial name="_ValidationScriptsPartial" />
+                        }
                         <form method="get" action="/Register">
                             <button type="submit" class="btn btn-lg btn-success btn-block">Register</button>
                         </form>
@@ -49,5 +57,3 @@
     </div>
 </body>
 </html>
-
-
