--- a/BudgieBudgeting/Pages/Shared/_Layout.cshtml
+++ b/BudgieBudgeting/Pages/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/BudgieBudgeting.styles.css" asp-append-version="true" />
+    <link rel="icon" type="image/x-icon" href="~/favicon.ico" />
 </head>
 <body>
     <header>
@@ -49,3 +50,4 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
