--- a/BudgieBudgeting/Pages/Homepage.cshtml
+++ b/BudgieBudgeting/Pages/Homepage.cshtml
@@ -4,4 +4,4 @@
 	ViewData["Title"] = "Login";
 }
 
-<h1 class="display-4">You Have Cooked</h1>
+<h1 class="display-4" style="text-align:center">Welcome to Budgie Budgeting</h1>
