Began Work on the dropdown menu within the homepage

--- a/BudgieBudgeting/Pages/Homepage.cshtml
+++ b/BudgieBudgeting/Pages/Homepage.cshtml
@@ -1,28 +1,48 @@
 ﻿@page
 @model BudgieBudgeting.Pages.Shared.HomepageModel
 @{
-	ViewData["Title"] = "Login";
+    ViewData["Title"] = "Login";
 }
 <!Doctype html>
 <html>
 <head>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="/css/HomepageDropdown.css"></script>
 </head>
 <body>
-<h1 class="display-4" style="text-align:center">Welcome to Budgie Budgeting</h1>
+    <h1 class="display-4" style="text-align:center">Welcome to Budgie Budgeting</h1>
     <ul class="nav navbar-nav">
         <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"> UserName <!--This will be updated with the users name when t--> <span class="glyphicon glyphicon-user pull-right"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Iasmani Pinazo <span class="glyphicon glyphicon-user pull-right"></span></a>
             <ul class="dropdown-menu">
-                <li><a href="#">Account Settings <span class="glyphicon glyphicon-cog pull-right"></span></a></li>
+                <li class="dropdown-submenu">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account Settings <span class="glyphicon glyphicon-cog pull-right"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Update Account</a></li>
+                        <li><a href="#">Delete Account</a></li>
+                    </ul>
+                </li>
                 <li class="divider"></li>
-                <li><a href="#">User stats <span class="glyphicon glyphicon-stats pull-right"></span></a></li>
+                <li><a href="#" class="dropdown-toggle" data-toggle="dropdown">User Budgets<span class="glyphicon glyphicon-stats pull-right"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Update Account</a></li>
+                        <li><a href="#">Delete Account</a></li>
+                    </ul>
+                </li>
                 <li class="divider"></li>
                 <li><a href="#">Messages <span class="badge pull-right"> 42 </span></a></li>
                 <li class="divider"></li>
                 <li><a href="#">Favourites Snippets <span class="glyphicon glyphicon-heart pull-right"></span></a></li>
+                <li class="divider"></li>
+                <li class="dropdown-submenu">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">More Options <span class="glyphicon glyphicon-option-horizontal pull-right"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Sub Option 1</a></li>
+                        <li><a href="#">Sub Option 2</a></li>
+                    </ul>
+                </li>
                 <li class="divider"></li>
                 <li><a href="#">Sign Out <span class="glyphicon glyphicon-log-out pull-right"></span></a></li>
             </ul>
@@ -30,3 +50,12 @@
     </ul>
 </body>
 </html>
+<script>
+    $(document).ready(function () {
+        $('.dropdown-submenu a.dropdown-toggle').on("click", function (e) {
+            $(this).next('ul').toggle();
+            e.stopPropagation();
+            e.preventDefault();
+        });
+    });
+</script>
