--- a/BudgieBudgeting/Pages/Homepage.cshtml
+++ b/BudgieBudgeting/Pages/Homepage.cshtml
@@ -25,16 +25,16 @@
                     </ul>
                 </li>
                 <li class="divider"></li>
-                <li><a href="#" class="dropdown-toggle" data-toggle="dropdown">User Budgets<span class="glyphicon glyphicon-stats pull-right"></span></a>
+                <li class="dropdown-submenu">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">User Budgets<span class="glyphicon glyphicon-stats pull-right"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Update Account</a></li>
-                        <li><a href="#">Delete Account</a></li>
+                        <li><a href="#">Create Budget</a></li>
+                        <li><a href="#">Update Budget</a></li>
+                        <li><a href="#">Add Spending</a></li>
+                        <li><a href="#">Update Spending</a></li>
+                        <li><a href="#">Delete Budget</a></li>
                     </ul>
                 </li>
-                <li class="divider"></li>
-                <li><a href="#">Messages <span class="badge pull-right"> 42 </span></a></li>
-                <li class="divider"></li>
-                <li><a href="#">Favourites Snippets <span class="glyphicon glyphicon-heart pull-right"></span></a></li>
                 <li class="divider"></li>
                 <li class="dropdown-submenu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">More Options <span class="glyphicon glyphicon-option-horizontal pull-right"></span></a>
@@ -44,7 +44,7 @@
                     </ul>
                 </li>
                 <li class="divider"></li>
-                <li><a href="#">Sign Out <span class="glyphicon glyphicon-log-out pull-right"></span></a></li>
+                <li><a href="/login">Sign Out <span class="glyphicon glyphicon-log-out pull-right"></span></a></li>
             </ul>
         </li>
     </ul>
