--- a/BudgieBudgeting/Pages/login.cshtml
+++ b/BudgieBudgeting/Pages/login.cshtml
@@ -18,7 +18,7 @@
             <div class="col-md-4 col-md-offset-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Login</h3>
+                        <h3 class="panel-title" style="text-align:center">Login</h3>
                     </div>
                     <div class="panel-body">
                         <form method="post">
