--- a/BudgieBudgeting/Pages/Homepage.cshtml
+++ b/BudgieBudgeting/Pages/Homepage.cshtml
@@ -21,7 +21,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account Settings <span class="glyphicon glyphicon-cog pull-right"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Update Account</a></li>
-                        <li><a href="#">Delete Account</a></li>
+                        <li><a href="/Delete_account">Delete Account</a></li>
                     </ul>
                 </li>
                 <li class="divider"></li>
