--- a/BudgieBudgeting/Pages/Register.cshtml
+++ b/BudgieBudgeting/Pages/Register.cshtml
@@ -7,7 +7,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Nathan Swan Pole</title>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
@@ -53,7 +52,7 @@
                             <partial name="_ValidationScriptsPartial" />
                         }
                         <form method="get" action="/login">
-                            <button type="submit" class="btn btn-lg btn-success btn-block">login</button>
+                            <button type="submit" class="btn btn-lg btn-success btn-block">Login</button>
                         </form>
                         <hr />
                     </div>
