--- a/BudgieBudgeting/Pages/Homepage.cshtml
+++ b/BudgieBudgeting/Pages/Homepage.cshtml
@@ -15,7 +15,7 @@
     <h1 class="display-4" style="text-align:center">Welcome to Budgie Budgeting</h1>
     <ul class="nav navbar-nav">
         <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Iasmani Pinazo <span class="glyphicon glyphicon-user pull-right"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">User Name <span class="glyphicon glyphicon-user pull-right"></span></a>
             <ul class="dropdown-menu">
                 <li class="dropdown-submenu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account Settings <span class="glyphicon glyphicon-cog pull-right"></span></a>
