--- a/BudgieBudgeting/Pages/Homepage.cshtml
+++ b/BudgieBudgeting/Pages/Homepage.cshtml
@@ -9,7 +9,8 @@
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="/css/HomepageDropdown.css"></script>
+    <link href="/css/HomepageDropdown.css">
+    <link rel="stylesheet" href="/css/site.css">
 </head>
 <body>
     <h1 class="display-4" style="text-align:center">Welcome to Budgie Budgeting</h1>
