Stylesheet link for other pages

--- a/BudgieBudgeting/wwwroot/css/HomepageDropdown.css
+++ b/BudgieBudgeting/wwwroot/css/HomepageDropdown.css
@@ -12,7 +12,7 @@
     }
 
 .dropdown {
-    background: #fff;
+    background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 4px;
     width: 300px;
