--- a/BudgieBudgeting/Pages/Register.cshtml
+++ b/BudgieBudgeting/Pages/Register.cshtml
@@ -9,7 +9,7 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <link href="/css/site.css"></link>
+    <link rel="stylesheet" href="/css/site.css">
     <link rel="icon" type="image/x-icon" href="~/favicon.ico" />
 </head>
 <body>
