--- a/BudgieBudgeting/Pages/Shared/_Layout.cshtml.css
+++ b/BudgieBudgeting/Pages/Shared/_Layout.cshtml.css
@@ -45,5 +45,5 @@ button.accept-policy {
     width: 100%;
     white-space: nowrap;
     line-height: 60px;
-    background-color: #e5e5e5;
+    background-color: #ffffff;
 }
