Updated css for login.cshtml

--- a/BudgieBudgeting/Pages/login.cshtml
+++ b/BudgieBudgeting/Pages/login.cshtml
@@ -41,7 +41,7 @@
                                             <input name="remember" type="checkbox" value="Remember Me"> Remember Me
                                         </label>
                                     </div>
-                                    <input class="btn btn-lg btn-success btn-block" type="submit" value="Login">
+                                <input style="background-color: #44b3b1"  class="btn btn-lg btn-success btn-block" type="submit" value="Login">
                                     <div style="text-align:center; padding:4px;">Or</div>
                                 </fieldset>
                             </form>
@@ -49,7 +49,7 @@
                                 <partial name="_ValidationScriptsPartial" />
                             }
                             <form method="get" action="/Register">
-                                <button type="submit" class="btn btn-lg btn-success btn-block">Register</button>
+                            <button type="submit" style="background-color: #44b3b1" class="btn btn-lg btn-success btn-block">Register</button>
                             </form>
                             <hr />
                         </div>
