Added Update_Budget, added links to the homepage dropdown menu to the new pages that were added, and renamed Compare_Budget_and spend to Compare_Budget_and_Spend.

--- a/BudgieBudgeting/Pages/Check_Budget_Spend.cshtml
+++ b/BudgieBudgeting/Pages/Check_Budget_Spend.cshtml
@@ -1,4 +1,9 @@
 ﻿@page
 @model BudgieBudgeting.Pages.Check_Budget_SpendModel
 @{
+    ViewData["Title"] = "Check Budget Spend";
 }
+<!Doctype html>
+    <head><title></title></head>
+    <body></body>
+</html>
