--- a/BudgieBudgeting/Pages/Homepage.cshtml
+++ b/BudgieBudgeting/Pages/Homepage.cshtml
@@ -22,7 +22,7 @@
                 <li class="dropdown-submenu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account Settings <span class="glyphicon glyphicon-cog pull-right"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Update Account</a></li>
+                        <li><a href="/Update_Account">Update Account</a></li>
                         <li><a href="/Delete_account">Delete Account</a></li>
                     </ul>
                 </li>
@@ -30,8 +30,8 @@
                 <li class="dropdown-submenu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">User Budgets<span class="glyphicon glyphicon-stats pull-right"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Create Budget</a></li>
-                        <li><a href="#">Update Budget</a></li>
+                        <li><a href="/Create_Budget">Create Budget</a></li>
+                        <li><a href="/Update_Budget">Update Budget</a></li>
                         <li><a href="#">Add Spending</a></li>
                         <li><a href="#">Update Spending</a></li>
                         <li><a href="#">Delete Budget</a></li>
