--- a/BudgieBudgeting/Pages/Update_Budget.cshtml
+++ b/BudgieBudgeting/Pages/Update_Budget.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model BudgieBudgeting.Pages.Create_BudgetModel
+@model BudgieBudgeting.Pages.Update_BudgetModel
 @{
-    ViewData["Title"] = "Create Budget";
+    ViewData["Title"] = "Update_Budget";
 }
 <!Doctype html>
 <head>
