--- a/BudgieBudgeting/Pages/Delete_Account.cshtml
+++ b/BudgieBudgeting/Pages/Delete_Account.cshtml
@@ -12,6 +12,7 @@
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="/js/site.js"></script>
+    <link rel="stylesheet" href="/css/site.css">
     <link rel="icon" type="image/x-icon" href="~/favicon.ico" /> <!--Favicon May need to be updated on each page-->
 </head>
 <body>
