--- a/BudgieBudgeting/Pages/Homepage.cshtml
+++ b/BudgieBudgeting/Pages/Homepage.cshtml
@@ -30,8 +30,8 @@
                 <li class="dropdown-submenu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">User Budgets<span class="glyphicon glyphicon-stats pull-right"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/Create_Budget">Create Budget</a></li>
-                        <li><a href="/Update_Budget">Update Budget</a></li>
+                        <li><a href="/Create_Budget_Income">Create Budget</a></li>
+                        <li><a href="/Update_Budget_Income">Update Budget</a></li>
                         <li><a href="#">Add Spending</a></li>
                         <li><a href="#">Update Spending</a></li>
                         <li><a href="#">Delete Budget</a></li>
