--- a/BudgieBudgeting/Pages/Create_Budget_Income.cshtml
+++ b/BudgieBudgeting/Pages/Create_Budget_Income.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model BudgieBudgeting.Pages.Create_BudgetModel
+@model BudgieBudgeting.Pages.Create_Budget_IncomeModel
 @{
     ViewData["Title"] = "Create Budget";
 }
