--- a/BudgieBudgeting/Pages/Homepage.cshtml
+++ b/BudgieBudgeting/Pages/Homepage.cshtml
@@ -31,10 +31,12 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">User Budgets<span class="glyphicon glyphicon-stats pull-right"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/Create_Budget_Income">Create Budget</a></li>
-                        <li><a href="/Update_Budget_Income">Update Budget</a></li>
-                        <li><a href="#">Add Spending</a></li>
-                        <li><a href="#">Update Spending</a></li>
+                        <li><a href="/Update_Budget_Income">Update Budget Income</a></li>
+                        <li><a href="/Update_Budget">Update Budget</a></li>
+                        <li><a href="/Update_Spending">Update Spending</a></li>
+                        <li><a href="Check_Spending">Check Spending</a></li>
                         <li><a href="#">Delete Budget</a></li>
+                        <li><a href="Compare_Budget_and_Spend">Budget VS Spending</a></li>
                     </ul>
                 </li>
                 <li class="divider"></li>
