--- a/BudgieBudgeting/Pages/Update_Spending.cshtml
+++ b/BudgieBudgeting/Pages/Update_Spending.cshtml
@@ -12,42 +12,9 @@
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <link rel="stylesheet" href="/css/site.css">
     <link rel="icon" type="image/x-icon" href="~/favicon.ico" />
-
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="/css/UpdateSpending.css" rel="stylesheet" />
     <!-- Include Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
-    <style>
-        .budget-columns {
-            display: flex;
-            justify-content: space-between;
-        }
-
-        .budget-column {
-            width: 30%;
-            margin-bottom: 20px; /* Added margin for spacing */
-        }
-
-        .entry-container {
-            margin-bottom: 10px; /* Space between entries */
-            display: flex; /* Flexbox for horizontal alignment */
-            align-items: center; /* Align items vertically centered */
-        }
-
-            .entry-container input {
-                width: 70px; /* Set width for input box */
-                margin-left: 10px; /* Space between textarea and input */
-            }
-
-            .entry-container textarea {
-                width: calc(100% - 90px); /* Adjust width for the input box */
-                margin-right: 10px; /* Space between textarea and trash icon */
-            }
-
-        .add-button {
-            text-align: center;
-            margin-top: 10px; /* Space above the add buttons */
-        }
-    </style>
 </head>
 <body>
     <div class="container">
