Updated buttons for Register and Delete and Update Account

--- a/BudgieBudgeting/Pages/Register.cshtml
+++ b/BudgieBudgeting/Pages/Register.cshtml
@@ -44,7 +44,7 @@
                                         <input name="remember" type="checkbox" value="Remember Me"> Remember Me
                                     </label>
                                 </div>
-                                <input class="btn btn-lg btn-success btn-block" type="submit" value="Register">
+                                <input class="btn btn-lg btn-success btn-block" type="submit" style="background-color: #44b3b1" value="Register">
                                 <div style="text-align:center; padding:4px;">Or</div>
                             </fieldset>
                         </form>
@@ -52,7 +52,7 @@
                             <partial name="_ValidationScriptsPartial" />
                         }
                         <form method="get" action="/login">
-                            <button type="submit" class="btn btn-lg btn-success btn-block">Login</button>
+                            <button type="submit" style="background-color: #44b3b1" class="btn btn-lg btn-success btn-block">Login</button>
                         </form>
                         <hr />
                     </div>
