--- a/BudgieBudgeting/Pages/Delete_Account.cshtml
+++ b/BudgieBudgeting/Pages/Delete_Account.cshtml
@@ -38,7 +38,7 @@
                                     <input class="form-control" asp-for=DeleteCredential.Password type="password" placeholder="Password">
                                     <span asp-validation-for=DeleteCredential.Password class="text-danger"></span>
                                 </div>
-                                <button type="submit" class="btn btn-lg btn-success btn-block">Delete</button>
+                                <button type="submit" style="background-color: #44b3b1" class="btn btn-lg btn-success btn-block">Delete</button>
                             </fieldset>
                         </form>
                         @section Scripts {
