--- a/BudgieBudgeting/Pages/Update_Account.cshtml
+++ b/BudgieBudgeting/Pages/Update_Account.cshtml
@@ -45,7 +45,7 @@
                             <partial name="_ValidationScriptsPartial" />
                         }
                         <form method="get" action="/login">
-                            <button type="submit" class="btn btn-lg btn-success btn-block">Update</button>
+                            <button type="submit" style="background-color: #44b3b1" class="btn btn-lg btn-success btn-block">Update</button>
                         </form>
                         <hr />
                     </div>
