Added LoginPost Test

--- a/BudgieBudgeting/Pages/login.cshtml
+++ b/BudgieBudgeting/Pages/login.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model BudgieBudgeting.Pages.loginModel
+@model BudgieBudgeting.Pages.Shared.loginModel
 @{
     ViewData["Title"] = "Login";
 }
