--- a/BudgieBudgeting/Pages/Homepage.cshtml
+++ b/BudgieBudgeting/Pages/Homepage.cshtml
@@ -1,23 +1,35 @@
 ﻿@page
 @model BudgieBudgeting.Pages.Shared.HomepageModel
 @{
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = "Homepage";
+    var username = Model.Username; // Get the username from the session
 }
-<!Doctype html>
+<!DOCTYPE html>
 <html>
 <head>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/css/site.css"> 
+    <link rel="stylesheet" href="/css/site.css">
     <link href="/css/HomepageDropdown.css">
-  
 </head>
 <body>
     <h1 class="display-4" style="text-align:center">Welcome to Budgie Budgeting</h1>
+
+    <!-- Display the username in the dropdown menu -->
     <ul class="nav navbar-nav">
         <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="background-color:#fff; color:black;">User Name <span class="glyphicon glyphicon-user pull-right"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="background-color:#fff; color:black;">
+                @if (!string.IsNullOrEmpty(username))
+                {
+                    @username  <!-- Display the username -->
+                }
+                else
+                {
+                    <span>User Name</span>  <!-- Fallback if no username is available -->
+                }
+                <span class="glyphicon glyphicon-user pull-right"></span>
+            </a>
             <ul class="dropdown-menu">
                 <li class="dropdown-submenu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account Settings <span class="glyphicon glyphicon-cog pull-right"></span></a>
@@ -48,12 +60,13 @@
                     </ul>
                 </li>
                 <li class="divider"></li>
-                <li><a href="/login">Sign Out <span class="glyphicon glyphicon-log-out pull-right"></span></a></li>
+                <li><a href="/SignOut">Sign Out <span class="glyphicon glyphicon-log-out pull-right"></span></a></li>
             </ul>
         </li>
     </ul>
 </body>
 </html>
+
 <script>
     $(document).ready(function () {
         $('.dropdown-submenu a.dropdown-toggle').on("click", function (e) {
