--- a/BudgieBudgeting/Pages/login.cshtml
+++ b/BudgieBudgeting/Pages/login.cshtml
@@ -4,13 +4,15 @@
     ViewData["Title"] = "Login";
 }
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nathan Swan Pole</title>
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" />
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <link rel="stylesheet" href="/css/site.css">
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/css/site.css" />
     <link rel="icon" type="image/x-icon" href="~/favicon.ico" />
 </head>
 <body>
@@ -19,7 +21,7 @@
             <div class="col-md-4 col-md-offset-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title" style="text-align:center">Login</h3>
+                        <h3 class="panel-title text-center">Login</h3>
                     </div>
                     <div class="panel-body">
                         <form method="post">
@@ -29,19 +31,19 @@
                             }
                             <fieldset>
                                 <div class="form-group">
-                                    <input class="form-control" type="text" asp-for="Credential.Username" placeholder="YourName@example.com">
-                                    <span asp-validation-for="Credential.Username" class="text-danger"></span>
+                                    <input class="form-control" type="text" asp-for="Credential.Email" placeholder="YourName@example.com" />
+                                    <span asp-validation-for="Credential.Email" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" type="password" asp-for="Credential.Password" placeholder="Password">
+                                    <input class="form-control" type="password" asp-for="Credential.Password" placeholder="Password" />
                                     <span asp-validation-for="Credential.Password" class="text-danger"></span>
                                 </div>
                                 <div class="checkbox">
                                     <label>
-                                        <input name="remember" type="checkbox" value="Remember Me"> Remember Me
+                                        <input name="remember" type="checkbox" value="Remember Me" /> Remember Me
                                     </label>
                                 </div>
-                                <input style="background-color: #44b3b1" class="btn btn-lg btn-success btn-block" type="submit" value="Login">
+                                <input style="background-color: #44b3b1" class="btn btn-lg btn-success btn-block" type="submit" value="Login" />
                                 <div style="text-align:center; padding:4px;">Or</div>
                             </fieldset>
                         </form>
