Fix registration tests and correct identifiers
Updated `Register.cshtml` to fix a typo in the submit button's `id` attribute. Removed `TestRegister.cs` and its namespace `BudgieBudgetingTests`. In `TestRegisterSelenium.cs`, corrected the namespace, updated test methods to focus on registration, added a new test for user input errors, and removed commented-out code.

--- a/BudgieBudgeting/Pages/Register.cshtml
+++ b/BudgieBudgeting/Pages/Register.cshtml
@@ -44,7 +44,7 @@
                                         <input name="remember" type="checkbox" value="Remember Me"> Remember Me
                                     </label>
                                 </div>
-                                <input id="regster" class="btn btn-lg btn-success btn-block" type="submit" style="background-color: #44b3b1" value="Register">
+                                <input id="register" class="btn btn-lg btn-success btn-block" type="submit" style="background-color: #44b3b1" value="Register">
                                 <div style="text-align:center; padding:4px;">Or</div>
                             </fieldset>
                         </form>
